# Assignment-2

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yml  requirements.txt
BD2app/: main.py
BD2app/pages/: signup.py
BD2app/utils/: openai_utils.py
airflow/: docker-compose.yaml
airflow/dags/: data_pipeline_dag.py
airflow_home/: airflow.cfg  airflow.db
app/: main.py
app/api/: services.py
app/core/: config.py
app/db/: bigquery.py
app/services/: adobe_pdf_extractor.py  opensource_pdf_extractor.py
architecture_diagram/: architecture_diagram.ipynb
backend/Scripts/: activate.bat
credentials/: damg7245-assignment2-437318-702652430e0d.json
fastapi_backend/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt
fastapi_backend/app/api/: ai_analysis.py  auth.py  pdf_extraction.py  questions.py
fastapi_backend/app/core/: security.py
fastapi_backend/app/models/: user.py
fastapi_backend/app/schemas/: user.py
fastapi_backend/app/services/: openai_service.py
fastapi_backend/backend/: pyvenv.cfg
fastapi_backend/backend/Scripts/: activate
fastapi_backend/credentials/: damg7245-project2-1daeb31ccdee.json
streamlit_frontend/: .dockerignore  Dockerfile  requirements.txt
streamlit_frontend/BD2app/: main.py
streamlit_frontend/BD2app/pages/: login.py  testing.py
streamlit_frontend/BD2app/utils/: db_utils.py
